updating pricing templates

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -807,5 +807,6 @@
             alert('No matching report found. Try: management, pipeline, monthly, dashboard, budget, etc.');
         }
     </script>
+    {% block extra_js %}{% endblock %}
 </body>
 </html> 
